# Nano-VS-SLAM

./: README.md  create_depth.py  create_segmentation.py  datasets.json  demo.py  eval_multitask.py  export_onnx.py  plot_script.py  pyproject.toml  quantize.py  requirements.txt  requirements_cu118.txt  tests.py  train_multitask.py  train_visloc.py  vo_eval.py
bash_scripts/: export_all_onnx.sh  get_hpatches.sh  install.sh  setup_demo.sh
demo_data/: readme.txt
deprecated/: dataset_statistics.py  export.py  export_executorch_script.py  export_quantized.py  keypoint_net_vlad.py  kp2dtiny_quantize.py  mobilevit.py  onnx_quantization.py  tiny_keypoint_net.py  tiny_vit.py  train_segmentation.py  vgg16.py
gluefactory/configs/: kp2dtiny+lightglue_homography.yaml  kp2dtiny_A+lightglue_homography.yaml  kp2dtiny_F+lightglue_homography.yaml  kp2dtiny_F+lightglue_megadepth.yaml
gluefactory/models/extractors/: kp2dtiny.py
lightglue/: lightglue.py  lightglue_configs.py
src/data/: cityscapes.py  coco.py  cocostuff.json  cocostuff24.json  cocostuff_mapping.json  dataset.py  dataset_utils.py  nyuv2.py  patches_dataset.py  pittsburgh.py  scene_parse_150.py  scene_parse_mapping.py  tokyo247.py
src/evaluation/: depth_estimation.py  descriptor.py  descriptor_evaluation.py  detector.py  evaluate_keypoints.py  evaluate_segmentation.py  global_descriptor.py  global_descriptor_evaluation.py  keypoints.py  segmentation.py  visual_odometry.py  visual_odometry_evaluation.py
src/kp2dtiny/: requirements.txt
src/kp2dtiny/models/: KeypointNetwithIOLoss.py  inlier_net.py  kp2d_former.py  kp2dtiny.py  segformer.py
src/kp2dtiny/modules/: base.py  encoders.py  segformer.py
src/kp2dtiny/modules/aggregators/: convap.py  gem.py  netvlad.py
src/kp2dtiny/modules/decoders/: heads.py  segmentation.py  vpr.py
src/kp2dtiny/utils/: image.py  keypoints.py  losses.py
src/visual_odometry/: camera.py  dataset.py  feature_matcher.py  frontend.py  groundtruth.py  utils.py  visual_odometry.py
utils/: image.py  losses.py  netvlad_utils.py  plot.py  set_json.py  utils.py
