[project]
name = "nano-vs-slam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.11.2",
    "aiosignal==1.3.1",
    "async-timeout==5.0.1",
    "attrs==24.2.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "datasets==3.1.0",
    "dill==0.3.8",
    "docker-pycreds==0.4.0",
    "efficientnet-pytorch==0.7.1",
    "einops==0.8.0",
    "exceptiongroup==1.2.2",
    "faiss-cpu==1.9.0",
    "filelock==3.13.1",
    "fonttools==4.55.0",
    "frozenlist==1.5.0",
    "fsspec==2024.2.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "h5py==3.12.1",
    "huggingface-hub==0.26.2",
    "idna==3.10",
    "iniconfig==2.0.0",
    "jinja2==3.1.3",
    "joblib==1.4.2",
    "kiwisolver==1.4.7",
    "kornia==0.7.4",
    "kornia-rs==0.1.7",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "munch==4.0.0",
    "networkx==3.2.1",
    "numpy==1.26.3",
    "opencv-python==4.10.0.84",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==10.2.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "pretrainedmodels==0.7.4",
    "propcache==0.2.0",
    "protobuf==5.28.3",
    "psutil==6.1.0",
    "pyarrow==18.0.0",
    "pyparsing==3.2.0",
    "pytest==8.3.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "safetensors==0.4.5",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "segmentation-models-pytorch==0.3.4",
    "sentry-sdk==2.18.0",
    "setproctitle==1.3.3",
    "six==1.16.0",
    "smmap==5.0.1",
    "sympy==1.13.1",
    "threadpoolctl==3.5.0",
    "timm==0.9.7",
    "tomli==2.1.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchgeometry>=0.1.2",
    "torchvision>=0.20.1",
    "tqdm==4.67.0",
    "typing-extensions==4.9.0",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "wandb==0.18.7",
    "xxhash==3.5.0",
    "yarl==1.17.1",
]
